--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,5 +5,29 @@
     <string name="button_send1">24/25</string>
     <string name="button_send2">26/27</string>
     <string name="button_send3">28/29</string>
+    <string name="Toolbar_Title_Main">Powerplant</string>
+    <string name="Toolbar_Title_JDE">JDE</string>
+    <string name="title_activity_powerplantnavi1">Powerplantnavi1</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="drawer_navigation_open">Open Navigation Drawer</string>
+    <string name="drawer_navigation_close">Close Navigation Drawer</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="home_second">Home Second</string>
+    <string name="jdelot">LXB22JWWTS</string>
+    <string name="jdelinie">REST</string>
 
+    <string-array name="mhd_spinner">
+        <item>244</item>
+        <item>330</item>
+        <item>360</item>
+        <item>420</item>
+        <item>540</item>
+    </string-array>
 </resources>
